--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Script to send your last playing track on Last.FM to a Slack WebHook",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "keywords": [
     "last.fm",
@@ -13,7 +13,7 @@
   "author": "Michael Enger",
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.6.0",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "slack-node": "^0.1.8"
   }
 }
